<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/students" />
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/lessons" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_session"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/session" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_edu"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/educational_activities" />
    </group>

</menu>
